# inverse-optimal-control

./: pyproject.toml
ioc/examples/: reaching.py
ioc/methods/: infer.py  optimize.py  solvers.py
